--- a/character_sheet.css
+++ b/character_sheet.css
@@ -364,14 +364,31 @@ div.sheet-fire-talisman-bar {
     height: 20px;
     border: 1px solid black;
     color: black;
-    text-align: center;
+	padding-top:3px;
+	padding-left:3px;
+	padding-right:3px;
 }
+
+div.sheet-fire-talisman-bar > span{
+    width: 100%;
+    height: 16px;
+	background-color:green;
+	text-align: left;
+	display: inline-block;
+}
+
 input.sheet-fire-talisman-bar[value="0"] ~ div.sheet-fire-talisman-bar {
     background: white;
 }
 input.sheet-fire-talisman-bar[value="50"] ~ div.sheet-fire-talisman-bar {
     background: linear-gradient(to left, white 50%, red 50%);    
 }
+
+input.sheet-fire-talisman-bar[value="50"] ~ div.sheet-fire-talisman-bar > span{
+    width:50%;    
+}
+
+
 
 /*.sheet-traits-input {*/
 /*    width: 100%;*/
