--- a/character_sheet.css
+++ b/character_sheet.css
@@ -187,6 +187,82 @@ input[type=text].sheet-stat-input{
     background: white;
 }
 
+.sheet-spirit-bar {
+	display: inline-block;
+	position: relative;
+}
+
+.sheet-spirit-numbers {
+	position: relative;
+	margin-left: 42px;
+	margin-top: 10px;
+}
+
+.sheet-spirit-numbers-span {
+	position: relative;
+	font-size: 18px;
+	font-weight: bold;
+	height: 30px;
+}
+
+input[type=number].sheet-spirit-numbers-label {
+	position: relative;
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	background: transparent;
+	border-style: none;
+	text-align: center;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+.sheet-spirit-label {
+  width: 108px;
+  height: 108px;
+  position: absolute;
+  top: -35px;
+  left: 30px;
+  border-radius: 54px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.3), inset 0 0 20px rgba(0,0,0,1);
+  cursor: pointer;
+  overflow: hidden;
+  background: transparent;
+  color: #000;
+  line-height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  margin-left: -4px;
+}
+
+input[type="range"].sheet-rangespirit{
+  overflow: hidden;
+  position: absolute;
+  top: -35px;
+  left: 30px;
+  width: 100px;
+  border-radius: 50px;
+  /*box-shadow: 0 0 5px rgba(0,0,0,0.3), inset 0 0 20px rgba(0,0,0,1);*/
+  -webkit-appearance: none;
+  background-color: transparent;
+  transform: rotate(270deg);
+}
+
+input[type='range'].sheet-rangespirit::-webkit-slider-runnable-track {
+      height: 100px;
+      -webkit-appearance: none;
+	  border-radius: 50px;
+      /*color: #13bba4;*/
+    }
+	
+input[type='range'].sheet-rangespirit::-webkit-slider-thumb {
+      width: 0px;
+      -webkit-appearance: none;
+      height: 100px;
+      box-shadow: -80px 0 0 86px #43e5f7;
+	  /*box-shadow: 0 0 5px rgba(255,0,0,0.3), inset 0 0 20px rgba(255,0,0,1);*/
+    }
 /*
  * Tabs section
  */
