--- a/character_sheet.css
+++ b/character_sheet.css
@@ -196,6 +196,7 @@ input[type=text].sheet-stat-input{
 	position: relative;
 	margin-left: 42px;
 	margin-top: 10px;
+	text-align: center;
 }
 
 .sheet-spirit-numbers-span {
@@ -208,13 +209,15 @@ input[type=text].sheet-stat-input{
 input[type=number].sheet-spirit-numbers-label {
 	position: relative;
 	display: inline-block;
-	width: 30px;
+	width: 40px;
 	height: 30px;
 	background: transparent;
 	border-style: none;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
+	margin-top: -5px;
+	margin-left: -5px;
 }
 
 .sheet-spirit-label {
