--- a/character_sheet.css
+++ b/character_sheet.css
@@ -672,6 +672,30 @@ input[type='range'].sheet-rangehealth::-webkit-slider-thumb {
     z-index: 100;
 }
 
+.sheet-health-left-leg {
+    /*display: block;*/
+    position: relative;
+    top: 300px;
+    left: 72px;
+    z-index: 100;
+}
+
+.sheet-health-right-leg {
+    /*display: block;*/
+    position: relative;
+    top: 300px;
+    left: 212px;
+    z-index: 100;
+}
+
+.sheet-health-head {
+    /*display: block;*/
+    position: relative;
+    top: 10px;
+    left: 142px;
+    z-index: 100;
+}
+
 /*
  * Inventory section
  */
