--- a/character_sheet.css
+++ b/character_sheet.css
@@ -380,7 +380,7 @@ input.sheet-spell-type-test[value='Water'] ~ input.sheet-spell-damage-display {
 }
 
 input.sheet-spell-type-test[value='Fire'] ~ input.sheet-spell-damage-display{
-    color: orange;
+    color: #D4111C;
 }
 
 input.sheet-spell-type-test[value='Earth'] ~ input.sheet-spell-damage-display{
@@ -402,8 +402,8 @@ select.sheet-spell-damage {
     height: 32px;
     font-size: 1.5em;
     border: none;
-/*    -webkit-appearance: none;
-    -moz-appearance: none;*/
+    -webkit-appearance: none;
+    -moz-appearance: none;
     position: absolute;
 }
 
@@ -432,12 +432,50 @@ select.sheet-spell-damage {
     width: 25px;
     /*margin-left: 77px;*/
     margin-top: -12px;
+    display: none;
+}
+
+input.sheet-spell-cost-display[value="Fire"] ~ .sheet-image-fire{
+    display: inline-block;
+}
+
+input.sheet-spell-cost-display[value="Water"] ~ .sheet-image-water{
+    display: inline-block;
+}
+
+input.sheet-spell-cost-display[value="Earth"] ~ .sheet-image-earth{
+    display: inline-block;
+}
+
+input.sheet-spell-cost-display[value="Metal"] ~ .sheet-image-metal{
+    display: inline-block;
+}
+
+input.sheet-spell-cost-display[value="Wood"] ~ .sheet-image-wood{
+    display: inline-block;
+}
+
+input.sheet-spell-cost-display[value="Hand"] ~ .sheet-image-hand{
+    display: inline-block;
 }
 
 .sheet-spell-type-image{
     width: 25px;
     margin-left: 77px;
     margin-top: -12px;
+    display: none;
+}
+
+input.sheet-spell-type-display[value="Projectile"] ~ .sheet-image-projectile{
+    display: inline-block;
+}
+
+input.sheet-spell-type-display[value="Area"] ~ .sheet-image-area{
+    display: inline-block;
+}
+
+input.sheet-spell-type-display[value="Living"] ~ .sheet-image-living{
+    display: inline-block;
 }
 
 .sheet-spell-hs-notes-input {
